[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
rust_decimal = { version = "1.29.1", features = ["maths"] }
thiserror = "1.0.40"

[dev-dependencies]
rust_decimal_macros = "1.29.1"
